--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,28 +10,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.11'
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.11'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Deploy to Server
-      uses: easingthemes/ssh-deploy@v2
-      with:
-        server: ${{ secrets.SERVER }}
-        local: '/home/kanye/workspace/project_django/myportfolio'
-        remote: '/home/myportfolio/myportfolio'
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        args: '-o StrictHostKeyChecking=no'
-
-    - name: Debug
-      run: echo "Debugging info"
-        
+      - name: Deploy to Server
+        uses: easingthemes/ssh-deploy@v2
+        with:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          REMOTE_HOST: ${{ secrets.SERVER }}
+          REMOTE_USER: myportfolio
+          SOURCE: '/home/kanye/workspace/project_django/myportfolio'
+          TARGET: '/home/myportfolio/myportfolio'
+          ARGS: '-o StrictHostKeyChecking=no'
+ 
+      - name: Debug
+        run: echo "Debugging info"
