--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -34,4 +34,8 @@ jobs:
           ARGS: '-o StrictHostKeyChecking=no'
  
       - name: Debug
-        run: echo "Debugging info"
+        run: |
+          echo "Debugging info"
+          echo "SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}"
+          echo "SERVER: ${{ secrets.SERVER }}"
+
