--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 asgiref==3.7.2
+dj-database-url==2.3.0
 Django==5.0.1
 django-pdfkit==0.3.1
+gunicorn==23.0.0
+packaging==24.2
 pdfkit==0.6.0
 pillow==10.2.0
+psycopg2-binary==2.9.10
 python-decouple==3.8
 secure-smtplib==0.1.1
 sqlparse==0.4.4
+typing_extensions==4.12.2
 wkhtmltopdf==0.2
