--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.7.2
+Brotli==1.1.0
+click==8.1.8
 dj-database-url==2.3.0
 Django==5.0.1
 django-pdfkit==0.3.1
 gunicorn==23.0.0
+h11==0.14.0
 packaging==24.2
 pdfkit==0.6.0
 pillow==10.2.0
@@ -11,4 +14,6 @@ python-decouple==3.8
 secure-smtplib==0.1.1
 sqlparse==0.4.4
 typing_extensions==4.12.2
+uvicorn==0.34.0
+whitenoise==6.9.0
 wkhtmltopdf==0.2
